Standard demo
-------------

* Fixed a security bug where an attacker could craft a URI that tricks
  Interchange into executing arbitrary Perl code.  The Perl code would be 
  subject to the Safe constraints of course, but could still be devastating 
  to the security of the target website.

* Display modified date on Saved Carts / Recurring Order page in a human
  readable format (#37).

UI
--

* Matrix options editor can now display more than 50 variants via the use of a
  more-list.

* Fix sort order of generated variant codes so that they match the code that is
  ordered from the flypage.

* You can now mark individual options to be treated as "simple options" even
  though the product is set to Matrix options.  This is useful if you have one
  or more options that you don't wish to track for inventory purposes or if you
  want to use a text or textarea widget (which is not possible with matrix
  options).  Requires the addition of an o_simple column to the options table
  for existing catalogs.

* New [widget-info] UI tag.

* Option editor will now correctly generate variants for options that use
  widgets capable of multiple selections (ie, multiple or checkbox widgets).

Packaging
---------

* Apache 2 is now default webserver for Debian packages.

* Added missing dbconfig-common hooks and set defaults for database name and
  database user to interchange-cat-standard Debian package.

Interchange 5.5.1 released on 2007-08-21.

Core
----

* Removed odd formatting from --add entry in interchange manual page.

* Fixed a DoS exploit. A carefully crafted HTTP POST request could cause
  an Interchange page processor to hang until it's killed by Interchange's
  periodic housekeeping routine. If several of these requests are received
  in quick succession then it could be possible to disable all of the page
  processors, rendering Interchange unresponsive for a while. Fixed by
  Kevin Walsh; pointed out by Donald Alexander.
