@@ -1,6 +1,6 @@
 # UI::Primitive - Interchange configuration manager primitives
 
-# $Id: Primitive.pm,v 2.27 2008-04-10 17:52:14 docelic Exp $
+# $Id: Primitive.pm,v 2.28 2008-04-10 22:26:12 docelic Exp $
 
 # Copyright (C) 2002-2007 Interchange Development Group
 # Copyright (C) 1998-2002 Red Hat, Inc.
@@ -27,7 +27,7 @@ my($order, $label, %terms) = @_;
 
 package UI::Primitive;
 
-$VERSION = substr(q$Revision: 2.27 $, 10);
+$VERSION = substr(q$Revision: 2.28 $, 10);
 
 $DEBUG = 0;
 
@@ -416,7 +416,7 @@ sub list_images {
 	my @names;
 	my $regex;
 	eval {
-		$regex = qr{$suf$}o;
+		$regex = qr{$suf$};
 	};
 	return undef if $@;
 	my $wanted = sub {
